--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["debug_trace_execution"]
+debug_trace_execution = []
+
 [dependencies]
 num_enum = "0.5"
