--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["debug_trace_execution", "debug_print_code", "debug_log_gc", "debug_stress_gc"]
+#default = ["debug_trace_execution", "debug_print_code", "debug_log_gc", "debug_stress_gc"]
 debug_trace_execution = []
 debug_print_code = []
 debug_log_gc = []
