--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "kind": "bin"
                 }
             },
-            "args": ["tests/class.lox"],
+            "args": ["../craftinginterpreters/test/limit/stack_overflow.lox"],
             "cwd": "${workspaceFolder}"
         },
         {
