--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "clox"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+debug = true
 
 [features]
 debug_trace_execution = []
