--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "kind": "bin"
                 }
             },
-            "args": [],
+            "args": ["../craftinginterpreters/test/benchmark/zoo.lox"],
             "cwd": "${workspaceFolder}"
         },
         {
