--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,6 +11,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+banjoc = {path = "../banjoc"}
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
