--- a/banjoc/Cargo.toml
+++ b/banjoc/Cargo.toml
@@ -9,3 +9,7 @@ debug_trace_execution = []
 debug_print_code = []
 debug_log_gc = []
 debug_stress_gc = []
+
+[dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
