--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -13,8 +13,9 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2"
-banjoc = {path = "../banjoc"}
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+
+banjoc = { path = "../banjoc" }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
