--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,4 +8,5 @@ name = "banjo"
 path = "src/main.rs"
 
 [dependencies]
-banjoc = {path = "../banjoc"}
+banjoc = { path = "../banjoc" }
+serde_json = "1"
