--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -13,7 +13,8 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+wasm-bindgen = "0.2"
+serde-wasm-bindgen = "0.4"
 
 banjoc = { path = "../banjoc" }
 
