--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -14,6 +14,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+serde = "1"
 serde-wasm-bindgen = "0.4"
 
 banjoc = { path = "../banjoc" }
