--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,45 +1,22 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug executable 'clox'",
-            "cargo": {
-                "args": [
-                    "build",
-                    "--bin=clox",
-                    "--package=clox"
-                ],
-                "filter": {
-                    "name": "clox",
-                    "kind": "bin"
-                }
-            },
-            "args": ["../craftinginterpreters/test/benchmark/zoo.lox"],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in executable 'clox'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--bin=clox",
-                    "--package=clox"
-                ],
-                "filter": {
-                    "name": "clox",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug executable 'banjo'",
+      "cargo": {
+        "args": ["build", "--bin=banjo", "--package=cli"],
+        "filter": {
+          "name": "banjo",
+          "kind": "bin"
         }
-    ]
+      },
+      "args": ["banjoc/tests/sum_list.json"],
+      "cwd": "${workspaceFolder}"
+    }
+  ]
 }
